--- a/src/components/ui/LogoMarquee.css
+++ b/src/components/ui/LogoMarquee.css
@@ -1,5 +1,5 @@
 .logo-marquee-container {
-  background-color: rgb(53, 52, 52);
+  background-color: rgb(249 115 22);
   color: #fff;
   padding: 20px;
   text-align: center;
